src/styles/sidenav.css
/* Sidevav */
.sidenav {
  grid-row: span 2;
  order: 1;
  padding-block: var(--space-lg);
  border-right: 1px solid var(--clr-neutral-150);
  height: 100vh;
  height: 100dvh;
  overflow: visible;
  background-color: var(--clr-white) !important;
  width: max-content;
  position: sticky;
  top: 0;
}
body.dark .sidenav{
  background-color: var(--clr-neutral-bg) !important;
}
.side-nav-underlay{
  display: none;
  transition: all .3s;
}
.sidenav.open{
  left: 0;
}

.sidenav-bottom {
  margin-top: auto;
  height: auto;
}

.sidenav-links-list{
  gap: var(--space-lg);
}

.sidenav ul>li>a {
  padding: var(--space-xs) 0;
  width: 100%;
  position: relative;
  transition: transform,max-width .3s ease-in-out;
}

.sidenav a.active-link::before {
  content: '';
  position: absolute;
  width: 5px;
  border-radius: 8px 0 0 8px;
  height: 30px;
  right: 0;
  top: 8px;
}

.sidenav-toggle {
  position: fixed;
  margin-top: 4.675rem;
  height: 40px;
  width: 40px;
  z-index: 1000;
  background-color: var(--clr-neutral-bg);
  translate: -20% 0;
  border: 1px solid var(--clr-neutral-150);
  border-radius: 8px;
  transform-origin: left;
  visibility: hidden;
  transition: left .5s ease-in-out;
  /* animation: highlight .5s ease-in alternate infinite; */
}

.sidenav-toggle.paused{
  animation-play-state: paused;
}

@keyframes highlight {
  from{
    transform: scale(1);
  }
  to {
    /* translate: 0% 0; */
    transform: scale(1.5);
    animation-delay: 10s;
  }
}
@keyframes movement {
  from{
    transform: translateX(-30px);
  }
  to {
    transform: translateX(0);
  }
}

.sidenav-toggle svg {
  width: 24px;
  transition: transform .3s ease-in-out;
  transform: rotateZ(90deg);
}

.sidenav-toggle[data-open=true] svg {
  transform: rotateZ(90deg);
}

.sidenav-toggle[data-open=false] svg {
  transform: scaleX(-1) rotateZ(90deg);
}

@media screen and (max-width: 625px) {
  .sidenav {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    translate: -100% 0;
    bottom: 0;
    transition: all .5s ease-in-out;
  }
  .sidenav.open {
    translate: 0;
  }
  .sidenav-toggle{
    left: 0;
    visibility: visible;
    color: #B2ABAB;
  }

  .sidenav-links-list{
    gap: 6px;
  }

  .sidenav.open + .sidenav-toggle{
    left: 70px;
  }
  /* .side-nav-underlay{
    display: none;
  } */
  .side-nav-underlay.open{
    position: fixed;
    z-index: 900;
    width: 100%;
    height: 100%;
    background-color: rgb(255, 255, 255 / 30%);
    backdrop-filter: blur(5px);
    display: block;
    pointer-events: none;
  }
}

